--- a/donot-collide/css/common.css
+++ b/donot-collide/css/common.css
@@ -38,6 +38,13 @@ html, body{
   height: 50px;
   background: #3333FF;
   position: absolute;
-  top: 0;
   left: 0;
+  bottom: 0;
+}
+
+.barrier{
+  width: 50px;
+  height: 50px;
+  background: #FFCC66;
+  position: absolute;
 }
