--- a/donot-collide/css/common.css
+++ b/donot-collide/css/common.css
@@ -40,6 +40,10 @@ html, body{
   position: absolute;
   left: 0;
   bottom: 0;
+  line-height: 50px;
+  text-align: center;
+  font-size: 16px;
+  color: #fff;
 }
 
 .barrier{
