--- a/donot-collide/css/common.css
+++ b/donot-collide/css/common.css
@@ -31,6 +31,7 @@ html, body{
   flex: 1;
   background: #CCFFFF;
   position: relative;
+  overflow: hidden;
 }
 
 .airship{
@@ -47,8 +48,8 @@ html, body{
 }
 
 .barrier{
-  width: 50px;
-  height: 50px;
+  width: 20px;
+  height: 20px;
   background: #FFCC66;
   position: absolute;
 }
