--- a/donot-collide/css/common.css
+++ b/donot-collide/css/common.css
@@ -8,6 +8,59 @@ html, body{
   overflow: hidden;
 }
 
+/* --------- 蒙层处理 ---------- */
+.zone{
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.zone .button{
+  width: 200px;
+  height: 100px;
+  border: 2px solid #FFCC66;
+  position: absolute;
+  left: 100px;
+  top: 200px;
+  background: aquamarine;
+  font-size: 2rem;
+  border-radius: 2rem;
+  text-align: center;
+  line-height: 100px;
+}
+.zone .date{
+  width: 200px;
+  height: 200px;
+  border: 2px solid #FFCC66;
+  position: absolute;
+  left: 100px;
+  top: 200px;
+  background: rgb(255, 253, 127);
+  font-size: 10rem;
+  border-radius: 100%;
+  text-align: center;
+  line-height: 200px;
+  display: none;
+}
+.zone .mask{
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,.7)
+}
+
+.date-time{
+  position: absolute;
+  font-size: 3rem;
+  right: 1rem;
+  top: 1rem;
+  border: 1px solid;
+  padding: .5rem;
+  border-radius: 1rem;
+}
+/* -------------游戏样式----------- */
+
 .container{
   max-width: 640px;
   height: 100%;
@@ -16,6 +69,7 @@ html, body{
   flex-direction: column;
   background: #FFFFCC;
   overflow: hidden;
+  z-index: 100;
 }
 .title{
   height: 50px;
@@ -39,11 +93,12 @@ html, body{
   height: 50px;
   background: #3333FF;
   position: absolute;
-  left: 0;
-  bottom: 0;
+  left: 150px;
+  top: 400px;
   line-height: 50px;
   text-align: center;
   font-size: 16px;
+
   color: #fff;
 }
 
